word guessing game code change